--- a/index.html
+++ b/index.html
@@ -1,40 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Mouse Shadow</title>
+  <title>Mouse Shadow | Day 16</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
   <div class="hero">
     <h1 contenteditable>🔥WOAH!</h1>
   </div>
 
-  <style>
-  html {
-    color: black;
-    font-family: sans-serif;
-  }
-
-  body {
-    margin: 0;
-  }
-
-  .hero {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-  }
-
-  h1 {
-    text-shadow: 10px 10px 0 rgba(0,0,0,1);
-    font-size: 100px;
-  }
-  </style>
-
-<script>
-</script>
+  <script src="js/main.js"></script>
 </body>
+
 </html>
